2007-07-05  Eugene Teo  <eteo@redhat.com>

	* regs.c (_stp_print_regs): #ifdef CONFIG_CPU_CP15 instead.

2007-07-02  Martin Hunt  <hunt@redhat.com>

	* sym.c (_stp_kallsyms_lookup): Improve heuristic
	for determining when a pointer is in a function.
	(_stp_func_print): New function.	
	* stack-i386.c, stack-x86_64.c: Remove obsolete
	unwind code. Use _stp_func_print().
	
2007-06-22  Frank Ch. Eigler  <fche@elastic.org>

	* string.c (_stp_text_str): Fix handling of embedded
	" and \ characters.

2007-06-21  David Smith  <dsmith@redhat.com>

	* lket/b2a/Makefile.in: Regenerated with automake 1.10.

2007-06-15  Martin Hunt  <hunt@redhat.com>
	From Quentin Barnes.
	* loc2c-runtime.h: Latest arm marcos.
	* stack-arm.c (__stp_stack_print): Add a cast.
	* regs.c (_stp_ret_addr): Define for arm.

2007-06-07  Martin Hunt  <hunt@redhat.com>
	PR 4075 fix from Ananth Mavinakayanahalli 
	* string.h (_stp_get_user): Define.
	* string.c (_stp_text_str): Use _stp_get_user().

2007-05-30  Martin Hunt  <hunt@redhat.com>

	Patch from Quentin Barnes.
	* arith.c: Add arm support for 64-bit division.
	* copy.c: Enable arm support.
	* loc2c-runtime.h: Ditto.
	* regs.[ch]: Ditto.
	* stack.c: Include stack-arm.c.
	* stack-arm.c: New file.
	* time.c (_stp_gettimeofday_ns):  hack
	for arm. See PR 4569.

2007-05-29  Frank Ch. Eigler  <fche@elastic.org>

	PR 4458
	* print_new.c (_stp_print_flush): Use interrupt-disabling
	spinlock variants.

2007-05-29  Frank Ch. Eigler  <fche@redhat.com>

	PR 2224
	* map.h (NEED_MAP_LOCKS): New config macro, defaults to 0.
	(MAP_GET_CPU, MAP_PUT_CPU): Wrappers, default to ~no-op.
	* map.c (_stp_pmap_clear,agg): Use them.
	* pmap-gen.c (_stp_pmap_new,set,add,get_cpu,get,del): Ditto.
	
2007-05-15  Martin Hunt  <hunt@redhat.com>

	* vsprintf.c: Add comment about %p.
	* regs.c, stack*.c, sym.c: Fix %p calls.

2007-04-27  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Improve check for debugfs in kernel.

2007-04-27  Frank Ch. Eigler  <fche@elastic.org>
